Stop showing banner image on mobile view

--- a/css/custom.scss
+++ b/css/custom.scss
@@ -18,11 +18,7 @@ nav {
 
 body #titleBar,
 body #titleBar .toggle:before{
-	background-image: url('../images/banner.jpg');
-	background-position: 0 center;
-	background-repeat: no-repeat;
-	background-size: cover;
-	background-attachment: fixed;
+	background: #012B4C;
 }
 
 
